upd: 1. plug in 'mCustomScrollbar' 2. general small fixes

--- a/styles/components/feedbacks.css
+++ b/styles/components/feedbacks.css
@@ -6,10 +6,10 @@
 .main__col-feedback:last-child {
 	display: flex;
 	align-items: center;
-	width: 25%;
+	width: 24%;
 }
 .main__col-feedback:nth-child(2){
-	width: 50%;
+	width: 52%;
 	padding: 20px;
 }
 
@@ -105,7 +105,6 @@ form {
 	}
 	.main__col-feedback:not(:first-child):not(:last-child) {
 		height: calc(100vh - 160px);
-		overflow-y: scroll;
 	}
 }
 
